--- a/OpenCV2_Cookbook/pom.xml
+++ b/OpenCV2_Cookbook/pom.xml
@@ -10,7 +10,7 @@
     <groupId>javacv.examples</groupId>
     <artifactId>opencv2-cookbook</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.2.0-SNAPSHOT</version>
     <name>OpenCV2 Cookbook Examples for JavaCV</name>
     <url>https://code.google.com/p/javacv</url>
     <inceptionYear>2011</inceptionYear>
@@ -29,12 +29,23 @@
         <scala.version>2.9.2</scala.version>
         <javacpp.version>0.1-SNAPSHOT</javacpp.version>
         <javacv.version>0.1-SNAPSHOT</javacv.version>
+        <platform.name>${os.name}-${os.arch}</platform.name>
     </properties>
 
     <repositories>
         <repository>
             <id>imagej.releases</id>
             <url>http://maven.imagej.net/content/repositories/releases</url>
+        </repository>
+        <repository>
+            <id>javacpp</id>
+            <name>JavaCPP</name>
+            <url>http://maven2.javacpp.googlecode.com/git/</url>
+        </repository>
+        <repository>
+            <id>javacv</id>
+            <name>JavaCV</name>
+            <url>http://maven2.javacv.googlecode.com/git/</url>
         </repository>
     </repositories>
 
@@ -53,51 +64,17 @@
             <groupId>com.googlecode.javacpp</groupId>
             <artifactId>javacpp</artifactId>
             <version>${javacpp.version}</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/javacpp.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.googlecode.javacv</groupId>
             <artifactId>javacv</artifactId>
             <version>${javacv.version}</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/javacv.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.googlecode.javacv</groupId>
-            <artifactId>javacv-linux-x86</artifactId>
+            <artifactId>javacv</artifactId>
             <version>${javacv.version}</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/javacv-linux-x86.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>com.googlecode.javacv</groupId>
-            <artifactId>javacv-linux-x86_64</artifactId>
-            <version>${javacv.version}</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/javacv-linux-x86_64.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>com.googlecode.javacv</groupId>
-            <artifactId>javacv-macosx-x86_64</artifactId>
-            <version>${javacv.version}</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/javacv-macosx-x86_64.jar</systemPath>
-        </dependency>
-
-        <dependency>
-            <groupId>com.googlecode.javacv</groupId>
-            <artifactId>javacv-windows-x86</artifactId>
-            <version>${javacv.version}</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/javacv-windows-x86.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>com.googlecode.javacv</groupId>
-            <artifactId>javacv-windows-x86_64</artifactId>
-            <version>${javacv.version}</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/javacv-windows-x86_64.jar</systemPath>
+            <classifier>${platform.name}</classifier>
         </dependency>
         <dependency>
             <groupId>net.imagej</groupId>
@@ -112,6 +89,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <sourceDirectory>src</sourceDirectory>
         <testSourceDirectory>test/src</testSourceDirectory>
@@ -165,9 +143,114 @@
             </plugin>
         </plugins>
     </build>
+
+    <!-- Used to determine property <platform.name>${os.name}-${os.arch}</platform.name> -->
+    <profiles>
+        <profile>
+            <id>linux</id>
+            <activation>
+                <os>
+                    <name>linux</name>
+                </os>
+            </activation>
+            <properties>
+                <os.name>linux</os.name>
+            </properties>
+        </profile>
+        <profile>
+            <id>macosx</id>
+            <activation>
+                <os>
+                    <name>mac os x</name>
+                </os>
+            </activation>
+            <properties>
+                <os.name>macosx</os.name>
+            </properties>
+        </profile>
+        <profile>
+            <id>windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <properties>
+                <os.name>windows</os.name>
+            </properties>
+        </profile>
+        <profile>
+            <id>i386</id>
+            <activation>
+                <os>
+                    <arch>i386</arch>
+                </os>
+            </activation>
+            <properties>
+                <os.arch>x86</os.arch>
+            </properties>
+        </profile>
+        <profile>
+            <id>i486</id>
+            <activation>
+                <os>
+                    <arch>i486</arch>
+                </os>
+            </activation>
+            <properties>
+                <os.arch>x86</os.arch>
+            </properties>
+        </profile>
+        <profile>
+            <id>i586</id>
+            <activation>
+                <os>
+                    <arch>i586</arch>
+                </os>
+            </activation>
+            <properties>
+                <os.arch>x86</os.arch>
+            </properties>
+        </profile>
+        <profile>
+            <id>i686</id>
+            <activation>
+                <os>
+                    <arch>i686</arch>
+                </os>
+            </activation>
+            <properties>
+                <os.arch>x86</os.arch>
+            </properties>
+        </profile>
+        <profile>
+            <id>amd64</id>
+            <activation>
+                <os>
+                    <arch>amd64</arch>
+                </os>
+            </activation>
+            <properties>
+                <os.arch>x86_64</os.arch>
+            </properties>
+        </profile>
+        <profile>
+            <id>x86-64</id>
+            <activation>
+                <os>
+                    <arch>x86-64</arch>
+                </os>
+            </activation>
+            <properties>
+                <os.arch>x86_64</os.arch>
+            </properties>
+        </profile>
+    </profiles>
+
     <issueManagement>
         <url>https://code.google.com/p/javacv/issues/list</url>
     </issueManagement>
+
     <mailingLists>
         <mailingList>
             <name>Discussion group for the JavaCV project</name>
@@ -175,6 +258,7 @@
             <archive>https://groups.google.com/forum/?fromgroups#!forum/javacv</archive>
         </mailingList>
     </mailingLists>
+
     <scm>
         <connection>scm:git:https://code.google.com/p/javacv/</connection>
         <url>https://code.google.com/p/javacv/</url>
