--- a/OpenCV2_Cookbook/pom.xml
+++ b/OpenCV2_Cookbook/pom.xml
@@ -1,7 +1,7 @@
 <!--
-  ~ Copyright (c) 2011-2012 Jarek Sacha. All Rights Reserved.
+  ~ Copyright (c) 2011-2013 Jarek Sacha. All Rights Reserved.
   ~
-  ~ Author's e-mail: jarek.listy at gmail.com
+  ~ Author's e-mail: jpsacha at gmail.com
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -10,7 +10,7 @@
     <groupId>javacv.examples</groupId>
     <artifactId>opencv2-cookbook</artifactId>
     <packaging>jar</packaging>
-    <version>0.3.1-SNAPSHOT</version>
+    <version>0.4-SNAPSHOT</version>
     <name>OpenCV2 Cookbook Examples for JavaCV</name>
     <url>https://code.google.com/p/javacv</url>
     <inceptionYear>2011</inceptionYear>
@@ -26,9 +26,9 @@
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
         <encoding>UTF-8</encoding>
-        <scala.version>2.9.2</scala.version>
-        <javacpp.version>0.3</javacpp.version>
-        <javacv.version>0.3</javacv.version>
+        <scala.version>2.10.1</scala.version>
+        <javacpp.version>0.4</javacpp.version>
+        <javacv.version>0.4</javacv.version>
         <platform.name>${os.name}-${os.arch}</platform.name>
     </properties>
 
@@ -79,13 +79,13 @@
         <dependency>
             <groupId>net.imagej</groupId>
             <artifactId>ij</artifactId>
-            <version>1.46r</version>
+            <version>1.47h</version>
         </dependency>
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.10</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -97,7 +97,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.1.3</version>
                 <executions>
                     <execution>
                         <id>scala-compile-first</id>
@@ -119,7 +119,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>3.0</version>
                 <executions>
                     <execution>
                         <phase>compile</phase>
@@ -133,7 +133,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12</version>
+                <version>2.14</version>
                 <configuration>
                     <useFile>false</useFile>
                     <disableXmlReport>true</disableXmlReport>
