--- a/FlyCapture2-demo/project/build.properties
+++ b/FlyCapture2-demo/project/build.properties
@@ -1,2 +1,8 @@
-sbt.version=1.2.8
+#
+# Copyright (c) 2011-2019 Jarek Sacha. All Rights Reserved.
+#
+# Author's e-mail: jpsacha at gmail.com
+#
+
+sbt.version=1.3.3
 
